--- a/style.css
+++ b/style.css
@@ -1,18 +1,27 @@
 
-button{text-align: center; color: whitesmoke;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;background-image: linear-gradient(to bottom, rgb(82, 62, 207), rgb(39, 8, 237));border-style: hidden; height: 40%; width: 100%; border-radius:35px;>}
-h1{font-size: 100%;}
+button{margin-top: 20px;
+    text-align:center; color: whitesmoke;font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;background-image: linear-gradient(to bottom, rgb(82, 62, 207), rgb(39, 8, 237));border-style: hidden; width: 225px; height: 43px; border-radius:30px;}
+/*div{margin-top: 7px;}   background-color: white;*/
+
+    h1{font-size: 100%;}
 
 h3{font-size: 50%;}
 h4{font-size:200%;}
 h5{font-size:60%; padding-left: 10%; padding-right: 10%;}
   
 
-main{width: 20%; margin-top: 10%; margin-left: 5%;}
+main{display: inline-flex; /*width:370px; */margin-top: 10%; margin-left: 15%;}
 /*section{background-color:white; width: 20%; margin-top: 10%; margin-left: 5%;}*/
 
-.BlueSquare{background-image: linear-gradient(to bottom, rgb(82, 62, 207), rgb(39, 8, 237));  text-align:center;border-radius: 20px; padding: 5%; color:whitesmoke;font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;}
-.WhiteSquare{background-color: white; text-align: left;font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;}
+.shadow{box-shadow: 6px 20px 20px 0px rgba(241 241 241);}
+.BlueSquare{background-image: linear-gradient(to bottom, rgb(82, 62, 207), rgb(39, 8, 237));  text-align:center;border-radius: 20px; padding: 5%; color:whitesmoke;font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; width: 280px;}
+.WhiteSquare{ padding-left: 35px;  text-align: left;font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;width: 300px; height: 433px; }
 
 
-.attribution { font-size: 11px; text-align: center; }
+.attribution { font-size: 11px; text-align: center; padding-top: 30px;}
 .attribution a { color: hsl(228, 45%, 44%); }
+
+@font-face {
+    font-family:'Font';
+    src: url(C:\Projects\results-summary-component-main\assets\fonts\HankenGrotesk-VariableFont_wght.ttf);
+}
